Improved: Fields going outside. Fix the alignment and widht to adjust the text box in the window. (OFBIZ-10316) Thanks Padmavati Rawat for reporting the issue and Pawan Verma for providing fix.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-plugins/trunk@1830448 13f79535-47bb-0310-9956-ffa450edef68

--- a/webpos/webapp/webpos/images/webpos.css
+++ b/webpos/webapp/webpos/images/webpos.css
@@ -423,8 +423,8 @@ input[type="text"]:focus, input[type="password"]:focus {
     background-color: #CCFFFF;
     position: absolute;
     top: 300px;
-    left: 20%;
-    width: 60%;
+    left: 15%;
+    width: 70%;
     height: 200px;
 }
 #pleaseWait {
